# publishing-on-crates.io-prints_table

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
