[package]
name = "print_table_lib"
version = "0.1.0"
authors = ["abdul"]
edition = "2018"
repository = "https://github.com/AbdulAzizAhmed320292/publishing-on-crates.io-prints_table"
homepage = "https://github.com/AbdulAzizAhmed320292/publishing-on-crates.io-prints_table"
license = "MIT/Apache-2.0"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
